omni/tests/goldens/types/unknown_type_03.omni
let value3:Mystery3 = 1
